fix image not showing

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @source "../.flowbite-react/class-list.json";
 
 body {
-	background: url(./bg.webp);
+	background: url(/bg.webp);
 	-webkit-background-size: cover;
 	background-size: 150%;
 	background-repeat: no-repeat;
